Fix container top spacing

--- a/src/victims_web/static/css/victims.css
+++ b/src/victims_web/static/css/victims.css
@@ -21,11 +21,9 @@ body {
     background-color: #f5f5f5;
 }
 
-/* useful for second navbar
 #wrap > .container {
-    padding: 60px 15px 0;
+    padding: 40px 15px 0;
 }
-*/
 
 .page-header {
     padding-bottom: 9px;
